sniphub-front/02_react.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sniphub-front
  namespace: sniphub
spec:
  selector:
    matchLabels:
      app: sniphub-front
  replicas: 3
  template:
    metadata:
      labels:
        app: sniphub-front
        namespace: sniphub
    spec:
      containers:
        - name: sniphub-front
          image: registry.digitalocean.com/docker-cours/sniphub-front:main-30
          ports:
            - containerPort: 80
              name: http
