sniphub-front/03_react_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sniphub-front
  namespace: sniphub
spec:
  selector:
    app: sniphub-front
  ports:
    - name: http
      port: 80
      targetPort: 3000

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sniphub-front
  namespace: sniphub
spec:
  hosts:
  - "sniphub.darmanin.info"
  gateways:
  - sniphub-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: sniphub-front
        port:
          number: 80
---
